alpm-types/src/relation/snapshots/base::opt_depend_invalid_string_parse_error@case_4.snap
---
source: alpm-types/src/relation/base.rs
---
error: invalid character in optional dependency
 | 
 | dep-name>=10: 
 |               ^ expected end of input.
 | 
 = while parsing:
   optional dependency: ()
   → invalid character in optional dependency
   → expected end of input.
